[package]
name = "anyways"
version = "0.3.0"
edition = "2021"
license = "MIT"

readme = "README.md"

description = "An alternative dynamic error handling library"
keywords = ["error", "library"]

repository = "https://github.com/alphaqu/anyways"
homepage = "https://github.com/alphaqu/anyways"
authors = ["notequalalpha"]
exclude = [
    ".idea/*",
]

[dependencies]
backtrace = "0.3.65"
owo-colors = "3.4.0"

[features]
send = []
sync = []
